--- a/src/components/MRList/MRList.css
+++ b/src/components/MRList/MRList.css
@@ -3,12 +3,14 @@
 .mr-list {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  flex: 1 1 0;
+  min-height: 0;
   background: transparent;
 }
 
 .mr-list-content {
-  flex: 1;
+  flex: 1 1 0;
+  min-height: 0;
   overflow-y: auto;
   padding: 16px 20px;
   display: flex;
