--- a/src/pages/MRListPage.css
+++ b/src/pages/MRListPage.css
@@ -190,11 +190,13 @@
 
 /* Main content area */
 .mr-list-page-content {
-  flex: 1;
+  flex: 1 1 0;
   min-height: 0;
   overflow: hidden;
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Loading state */
