chore: change approve button

--- a/src/components/Approval/ApprovalButton.css
+++ b/src/components/Approval/ApprovalButton.css
@@ -45,6 +45,8 @@
 
 .approval-button .shortcut-hint {
   color: var(--accent-warm-yellow);
+  text-decoration: underline;
+  margin-right: 1px;
 }
 
 .approval-status {
